fix text overlap

--- a/portfolio/static/css/index.css
+++ b/portfolio/static/css/index.css
@@ -672,9 +672,11 @@ footer small {
         margin-top: 5em;
     }
     #section2-title {
-        font-size: larger;
+        font-size: 2em;
         position: relative;
         z-index: 999;
+        color: white;
+        color: rgba(0, 0, 0, 0.5);
     }
 }
 @media only screen and (max-width: 376px) and (max-height: 668px) {
